CLAUDE.md: the bake-stub memo defect, PI-VALIDATED -- and the clinit card was stale
Two new cards and one correction.

THE MEMO CARD records what the arc cost and why. An immortal memo in image memory indexing a
mortal table; idx 3138 against a table 4074 deep when minted and 2274 when used; and the reason it
read as something else entirely -- `br` writes no x30, so BOOT RE-ENTERED carried a stale x30 that
named a healthy blr in String.valueOf(Object), and THREE of that report's four fields were
artifacts. The control that broke it open is worth more than the fix: String.valueOf opens
`mov x19, x0`, and x19 is callee-saved, so it holds the real receiver -- a valid Integer with an
intact vtable. Magic.readX0's comment claimed a measurement that only ever tested the READER.

Also recorded: the four silences (stashHelper stashing nothing for an unrooted helper -- the
watchRecv bug again; three unguarded trampoline tail-branches; four stub emitters baking an
unchecked trampoline address; both of lazyCompile's silent `return 0L`), and that the first guard
build was INERT, so "the three trampolines are cleared" was retracted rather than kept.

THE OVERLAY CARD records what stock Preconditions restores -- the whole long family, the
formatters, and the out-of-bounds MESSAGE -- plus the evidence it is genuinely in use (new
`arrayadopt [Ljava/lang/Number;` lines are stock's outOfBoundsMessage building its List<Number>),
and that --add-opens java.base/java.util is needed at FIVE sites, not the four recorded:
CompilerTest builds an image as its fixpoint check.

THE CORRECTION: the clinit card still read "a FINDING, not a fix, and NOT Pi-validated". a12acf8
landed the fix and never touched this file, so the arc's outcome was never written down. The
header now says so and names the three things that card got wrong -- the guard belongs AFTER the
intrinsic check, a self-referential guard must be suppressed, and suppressing notes for guarded
classes stalls the boot.

Co-Authored-By: